tests/diagnostics/tests/ui/wrong_bake_content_type.stderr
error[E0277]: the trait bound `Cow<'_, str>: From<u32>` is not satisfied
  --> tests/ui/wrong_bake_content_type.rs:10:5
   |
10 |     recipe_boilerplate!(SpanRecipe, u32);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<u32>` is not implemented for `Cow<'_, str>`
   |
   = help: the following other types implement trait `From<T>`:
             `Cow<'_, ByteStr>` implements `From<&ByteStr>`
             `Cow<'_, ByteStr>` implements `From<&ByteString>`
             `Cow<'_, ByteStr>` implements `From<ByteString>`
             `Cow<'_, CStr>` implements `From<&CStr>`
             `Cow<'_, CStr>` implements `From<&CString>`
             `Cow<'_, CStr>` implements `From<CString>`
             `Cow<'_, OsStr>` implements `From<&OsStr>`
             `Cow<'_, OsStr>` implements `From<&OsString>`
           and $N others
   = note: required for `u32` to implement `Into<Cow<'_, str>>`
   = note: this error originates in the macro `recipe_boilerplate` (in Nightly builds, run with -Z macro-backtrace for more info)
